# cicd-demo

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: push_to_ecr.yml  push_to_ecr.yml.bak  run_container.yml
